--- a/debbie-email-sig.html
+++ b/debbie-email-sig.html
@@ -7,34 +7,34 @@
         <table border="0" style="width: 100%; max-width: 560px; padding: 20px;">
             <tr>
                 <td colspan="2">
-                    <img src="media/BCS_GIF_Signature_Secretweapon.gif" style="width: 100%; margin-left: -11%; margin-bottom: -5%;"/>
+                    <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/BCS_GIF_Signature_Secretweapon.gif" style="width: 100%; margin-left: -11%; margin-bottom: -5%;"/>
                 </td>
             </tr>
             <tr>
                 <td width="25%" valign="top">
-                    <img src="media/DEB_1 (1) copy.png" style="width: 100%; min-width:140px; display: block;" >
+                    <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/DEB_1%20(1)%20copy.png" style="width: 100%; min-width:140px; display: block;" >
                 </td>
                 <td width="75%" valign="top" style="padding: 0 0 0 20px">
                     <h3 style="margin: 0 0 5px; font-size: 20px; color: #a30a24; line-height: 1.2; font-family: Aileron, sans-serif; font-weight: bold;">Debbie Melgarejo</h3>
                     <h5 style="margin: 0 0 0px; font-size: 14px; color: #191919; line-height: 1.2; font-family: Inter, sans-serif; font-weight: normal;">Creative Director, <b>Blink Creative Studio</b></h5>
                     
                     <div style="display: flex; align-items: center; margin-top: 10px;">
-                        <img src="media/iconmonstr-phone.svg" style="color: #191919; width:11px; display: inline-block; margin-right: 5px;"/>
+                        <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/b815afee95b3e13f35ea8ad6676a9b93aafbf14f/media/iconmonstr-phone.svg" style="color: #191919; width:11px; display: inline-block; margin-right: 5px;"/>
                         <a href="tel:+639 178721515" style="display: inline-block; font-size: 11px; color: #191919; font-family: Inter, sans-serif; font-weight: normal; text-decoration: none;">+639 178721515</a>
                     </div>
 
                     <div style="display: flex; align-items: center; margin-top: 1px;">
-                        <img src="media/iconmonstr-globe.svg" style="color: #191919; width:11px; display: inline-block; margin-right: 5px;"/>
+                        <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/b815afee95b3e13f35ea8ad6676a9b93aafbf14f/media/iconmonstr-globe.svg" style="color: #191919; width:11px; display: inline-block; margin-right: 5px;"/>
                         <a href="https://www.blinkcreativestudio.com/" target="_blank" style="display: inline-block; font-size: 11px; color: #191919; font-family: Inter, sans-serif; font-weight: normal; text-decoration: none;">www.blinkcreativestudio.com</a>
                     </div>
 
                     <div style="display: flex; align-items: center; margin-top: 10px;">
                         <a href="https://www.facebook.com/theblinkcreativestudio/" target="_blank" style="margin-right: 5px;">
-                            <img src="media/iconmonstr-facebook-6.svg" style="width:25px; display: inline-block;"/>
+                            <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/b815afee95b3e13f35ea8ad6676a9b93aafbf14f/media/iconmonstr-facebook-6.svg" style="width:25px; display: inline-block;"/>
                         </a>
 
                         <a href="https://www.instagram.com/theblinkcreativestudio/?hl=en" target="_blank">
-                            <img src="media/iconmonstr-instagram-12.svg" style="width:25px; display: inline-block;"/>
+                            <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/b815afee95b3e13f35ea8ad6676a9b93aafbf14f/media/iconmonstr-instagram-12.svg" style="width:25px; display: inline-block;"/>
                         </a>
                     </div>
                 </td>
