Replaced svg with github asset links

--- a/debbie-email-sig.html
+++ b/debbie-email-sig.html
@@ -19,22 +19,22 @@
                     <h5 style="margin: 0 0 0px; font-size: 14px; color: #191919; line-height: 1.2; font-family: Inter, sans-serif; font-weight: normal;">Creative Director, <b>Blink Creative Studio</b></h5>
                     
                     <div style="display: flex; align-items: center; margin-top: 10px;">
-                        <img src="media/phone.jpg" style="color: #191919; width:11px; display: inline-block; margin-right: 5px;"/>
+                        <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/phone.jpg" style="color: #191919; width:11px; display: inline-block; margin-right: 5px;"/>
                         <a href="tel:+639 178721515" style="display: inline-block; font-size: 11px; color: #191919; font-family: Inter, sans-serif; font-weight: normal; text-decoration: none;">+639 178721515</a>
                     </div>
 
                     <div style="display: flex; align-items: center; margin-top: 1px;">
-                        <img src="media/globe.jpg" style="color: #191919; width:11px; display: inline-block; margin-right: 5px;"/>
+                        <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/globe.jpg" style="color: #191919; width:11px; display: inline-block; margin-right: 5px;"/>
                         <a href="https://www.blinkcreativestudio.com/" target="_blank" style="display: inline-block; font-size: 11px; color: #191919; font-family: Inter, sans-serif; font-weight: normal; text-decoration: none;">www.blinkcreativestudio.com</a>
                     </div>
 
                     <div style="display: flex; align-items: center; margin-top: 10px;">
                         <a href="https://www.facebook.com/theblinkcreativestudio/" target="_blank" style="margin-right: 5px;">
-                            <img src="media/facebook.jpg" style="width:25px; display: inline-block;"/>
+                            <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/facebook.jpg" style="width:25px; display: inline-block;"/>
                         </a>
 
                         <a href="https://www.instagram.com/theblinkcreativestudio/?hl=en" target="_blank">
-                            <img src="media/instagram.jpg" style="width:25px; display: inline-block;"/>
+                            <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/instagram.jpg" style="width:25px; display: inline-block;"/>
                         </a>
                     </div>
                 </td>
