Changed assets, and font-weights

--- a/debbie-email-sig.html
+++ b/debbie-email-sig.html
@@ -16,15 +16,15 @@
                 </td>
                 <td width="75%" valign="top" style="padding: 0 0 0 20px">
                     <h3 style="margin: 0 0 5px; font-size: 20px; color: #a30a24; line-height: 1.2; font-family: Aileron, sans-serif; font-weight: bold;">Debbie Melgarejo</h3>
-                    <h5 style="margin: 0 0 0px; font-size: 14px; color: #191919; line-height: 1.2; font-family: Inter, sans-serif; font-weight: normal;">Creative Director, <b>Blink Creative Studio</b></h5>
+                    <h5 style="margin: 0 0 0px; font-size: 14px; color: #191919; line-height: 1.2; font-family: Inter, sans-serif; font-weight: normal;">Creative Director, <b style="font-weight: 400;">Blink Creative Studio</b></h5>
                     
                     <div style="display: flex; align-items: center; margin-top: 10px;">
-                        <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/phone.jpg" style="color: #191919; width:11px; display: inline-block; margin-right: 5px;"/>
+                        <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/phone.jpg" style="color: #191919; width:11px; height: 11px; display: inline-block; margin-right: 5px;"/>
                         <a href="tel:+639 178721515" style="display: inline-block; font-size: 11px; color: #191919; font-family: Inter, sans-serif; font-weight: normal; text-decoration: none;">+639 178721515</a>
                     </div>
 
-                    <div style="display: flex; align-items: center; margin-top: 1px;">
-                        <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/globe.jpg" style="color: #191919; width:11px; display: inline-block; margin-right: 5px;"/>
+                    <div style="display: flex; align-items: center; margin-top: 3px;">
+                        <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/globe.jpg" style="color: #191919; width:11px; height: 11px; display: inline-block; margin-right: 5px;"/>
                         <a href="https://www.blinkcreativestudio.com/" target="_blank" style="display: inline-block; font-size: 11px; color: #191919; font-family: Inter, sans-serif; font-weight: normal; text-decoration: none;">www.blinkcreativestudio.com</a>
                     </div>
 
