--- a/debbie-email-sig.html
+++ b/debbie-email-sig.html
@@ -7,12 +7,12 @@
         <table border="0" style="width: 100%; max-width: 560px; padding: 20px;">
             <tr>
                 <td colspan="2">
-                    <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/BCS_GIF_Signature_Secretweapon.gif" style="width: 100%; margin-left: -11%; margin-bottom: -5%;"/>
+                    <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/BCS_GIF_Signature_Secretweapon%20(1).gif" style="width: 100%; margin-left: -11%; margin-bottom: -5%;"/>
                 </td>
             </tr>
             <tr>
                 <td width="25%" valign="top">
-                    <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/DEB_1%20(1)%20copy.png" style="width: 100%; min-width:140px; display: block;" >
+                    <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/DEB_1%20(4)%20copy.jpeg" style="width: 100%; min-width:140px; display: block;" >
                 </td>
                 <td width="75%" valign="top" style="padding: 0 0 0 20px">
                     <h3 style="margin: 0 0 5px; font-size: 20px; color: #a30a24; line-height: 1.2; font-family: Aileron, sans-serif; font-weight: bold;">Debbie Melgarejo</h3>
