Changed gif file

--- a/debbie-email-sig.html
+++ b/debbie-email-sig.html
@@ -7,7 +7,7 @@
         <table border="0" style="width: 100%; max-width: 560px; padding: 20px;">
             <tr>
                 <td colspan="2">
-                    <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/BCS_GIF_Signature_Secretweapon%20(2).gif" style="width: 100%; ; margin-bottom: -5%;"/>
+                    <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/BCS_GIF_Signature_Secretweapon%20(3).gif" style="width: 100%;"/>
                 </td>
             </tr>
             <tr>
