Switched from web-based to html

--- a/debbie-email-sig.html
+++ b/debbie-email-sig.html
@@ -4,37 +4,37 @@
         <title>Email Signature</title>
     </head>
     <body>
-        <table border="0" style="width: 100%; max-width: 560px; padding: 20px;">
+        <table border="0" style="width: 400px; padding: 5px;">
             <tr>
                 <td colspan="2">
-                    <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/BCS_GIF_Signature_Secretweapon%20(3).gif" style="width: 100%;"/>
+                    <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/BCS_GIF_Signature_Secretweapon%20(3).gif" style="width: 330px"/>
                 </td>
             </tr>
             <tr>
-                <td width="25%" valign="top">
-                    <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/DEB_1%20(4)%20copy.jpeg" style="width: 100%; min-width:140px; display: block;" >
+                <td width="110px" valign="top">
+                    <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/DEB_1%20(4)%20copy.jpeg" style="width:105px; display: block;" >
                 </td>
-                <td width="75%" valign="top" style="padding: 0 0 0 20px">
-                    <h3 style="margin: 0 0 5px; font-size: 20px; color: #a30a24; line-height: 1.2; font-family: Aileron, sans-serif; font-weight: bold;">Debbie Melgarejo</h3>
-                    <h5 style="margin: 0 0 0px; font-size: 14px; color: #191919; line-height: 1.2; font-family: Inter, sans-serif; font-weight: normal;">Creative Director, <b style="font-weight: 400;">Blink Creative Studio</b></h5>
+                <td width="290px" valign="top" style="padding: 0 0 0 10px">
+                    <h3 style="margin: 0 0 5px; font-size: 14px; color: #a30a24; line-height: 1; font-family: Aileron, sans-serif; font-weight: bold;">Debbie Melgarejo</h3>
+                    <h5 style="margin: 0 0 0px; font-size: 12px; color: #191919; line-height: 1; font-family: Inter, sans-serif; font-weight: normal;">Creative Director, <b style="font-weight: 400;">Blink Creative Studio</b></h5>
                     
                     <div style="display: flex; align-items: center; margin-top: 10px;">
-                        <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/phone.jpg" style="color: #191919; width:11px; height: 11px; display: inline-block; margin-right: 5px;"/>
-                        <a href="tel:+639 178721515" style="display: inline-block; font-size: 11px; color: #191919; font-family: Inter, sans-serif; font-weight: normal; text-decoration: none;">+639 178721515</a>
+                        <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/phone.jpg" style="color: #191919; width:8px; height: 8px; display: inline-block; margin-right: 5px;"/>
+                        <a href="tel:+639 178721515" style="display: inline-block; font-size: 10px; color: #191919; font-family: Inter, sans-serif; font-weight: normal; text-decoration: none;">+639 178721515</a>
                     </div>
 
-                    <div style="display: flex; align-items: center; margin-top: 3px;">
-                        <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/globe.jpg" style="color: #191919; width:11px; height: 11px; display: inline-block; margin-right: 5px;"/>
-                        <a href="https://www.blinkcreativestudio.com/" target="_blank" style="display: inline-block; font-size: 11px; color: #191919; font-family: Inter, sans-serif; font-weight: normal; text-decoration: none;">www.blinkcreativestudio.com</a>
+                    <div style="display: flex; align-items: center; margin-top: 2px;">
+                        <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/globe.jpg" style="color: #191919; width:8px; height: 8px; display: inline-block; margin-right: 5px;"/>
+                        <a href="https://www.blinkcreativestudio.com/" target="_blank" style="display: inline-block; font-size: 10px; color: #191919; font-family: Inter, sans-serif; font-weight: normal; text-decoration: none;">www.blinkcreativestudio.com</a>
                     </div>
 
                     <div style="display: flex; align-items: center; margin-top: 10px;">
                         <a href="https://www.facebook.com/theblinkcreativestudio/" target="_blank" style="margin-right: 5px;">
-                            <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/facebook.jpg" style="width:25px; display: inline-block;"/>
+                            <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/facebook.jpg" style="width:20px; height: auto; display: inline-block;"/>
                         </a>
 
                         <a href="https://www.instagram.com/theblinkcreativestudio/?hl=en" target="_blank">
-                            <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/instagram.jpg" style="width:25px; display: inline-block;"/>
+                            <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/instagram.jpg" style="width:20px; height: auto; display: inline-block;"/>
                         </a>
                     </div>
                 </td>
@@ -43,3 +43,73 @@
     </body>
 
 </html>
+
+
+<mjml>
+    <mj-head>
+      <mj-attributes>
+        <mj-all padding="0" />
+      </mj-attributes>
+    </mj-head>
+    <mj-body>
+      <mj-section>
+        <mj-image width="350px" align="left" src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/BCS_GIF_Signature_Secretweapon%20(3).gif" />
+      </mj-section>
+      <mj-section>
+        <mj-group>
+  
+          <mj-column width="25%">
+            <mj-image align="left" src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/DEB_1%20(4)%20copy.jpeg" />
+          </mj-column>
+  
+          <mj-column width="75%" padding="0 10px">
+            <mj-text font-size="16px" color="red">Debbie Melgarejo</mj-text>
+            <mj-spacer height="5px" />
+            <mj-text font-size="14px">Creative Director, Blink Creative Studio</mj-text>
+            <mj-spacer height="5px" />
+            <mj-section>
+              <mj-group>
+                <mj-column width="5%">
+                  <mj-image align="left" width="12px" src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/phone.jpg" />
+                </mj-column>
+                <mj-column width="95%" padding="0 10px">
+                  <mj-text align="left" font-size="12px">+639 178721515</mj-text>
+                </mj-column>
+              </mj-group>
+            </mj-section>
+  
+            <mj-spacer height="5px" />
+  
+            <mj-section>
+              <mj-group>
+                <mj-column width="5%">
+                  <mj-image align="left" width="12px" src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/globe.jpg" />
+                </mj-column>
+                <mj-column width="95%" padding="0 10px">
+                  <mj-text align="left" font-size="12px">www.blinkcreativestudio.com</mj-text>
+                </mj-column>
+  
+              </mj-group>
+            </mj-section>
+  
+            <mj-spacer height="5px" />
+  
+            <mj-section>
+              <mj-group>
+                <mj-column width="8%">
+                  <mj-image align="left" width="16px" src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/facebook.jpg" />
+  
+                </mj-column>
+                <mj-column width="90%">
+                  <mj-image align="left" width="16px" src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/instagram.jpg" />
+                </mj-column>
+              </mj-group>
+            </mj-section>
+  
+  
+          </mj-column>
+  
+        </mj-group>
+      </mj-section>
+    </mj-body>
+  </mjml>
