Added new icons

--- a/email3.html
+++ b/email3.html
@@ -4,8 +4,8 @@
         <title>Email Signature</title>
 
         <link rel="stylesheet" href="https://use.typekit.net/djm4qbw.css">
-        <link href="https://fonts.googleapis.com/css?family=Inter:300,400,500,700" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Inter:300,400,500,700" rel="stylesheet" type="text/css">
         <style type="text/css">
             @import url(https://fonts.googleapis.com/css?family=Inter:300,400,500,700);
             @import url("https://use.typekit.net/djm4qbw.css");
@@ -15,7 +15,7 @@
         <table border="0" style="border-collapse:collapse;border-spacing:0px;width:400px;" cellpadding="0" cellspacing="0" >
             <tr>
                 <td style="width: 400px; height:auto;" align="left">
-                    <img src="media/signature.gif" width="330" height="auto" style="width:330px; height:auto"/>
+                    <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/signature.gif" width="330" height="auto" style="width:330px; height:auto"/>
                 </td>
             </tr>
             
