--- a/email3.html
+++ b/email3.html
@@ -9,31 +9,44 @@
         <style type="text/css">
             @import url(https://fonts.googleapis.com/css?family=Inter:300,400,500,700);
             @import url("https://use.typekit.net/djm4qbw.css");
+
+            @media (prefers-color-scheme: dark) {
+                #gif {
+                    src: "";
+                }
+
+                #phone {
+                    src: "";
+                }
+
+                #globe {
+                    src: "";
+                }
+            }
         </style>
     </head>
     <body>
         <table border="0" style="border-collapse:collapse;border-spacing:0px;width:400px;" cellpadding="0" cellspacing="0" >
             <tr>
                 <td style="width: 400px; height:auto;" align="left">
-                    <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/signature.gif" width="330" height="auto" style="width:330px; height:auto"/>
+                    <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/signature.gif" width="330" height="auto" style="width:330px; height:auto" name="gif"/>
                 </td>
             </tr>
             
             <tr>
                 <table border="0" style="border-collapse:collapse;border-spacing:0px;width: 400px; height: auto;" cellpadding="0" cellspacing="0">
                     <tr>
-                        <td width="105px" height="105px" valign="top">
+                        <td width="105px" height="105px" valign="top" style="margin: 0px;">
                             <img src="https://rb.gy/pmauok" style="display: block; width: 105px; height: auto; margin:0px" width="105" height="auto" />
                         </td>
                         <td width="295px" valign="top" style="padding: 0px 0px 0px 10px;">
-                            <h3 style="margin: 0px 0px 5px 0px; font-size: 14px; color: #a30a24; line-height: 1; font-family: Aileron, Arial, sans-serif; font-weight: 700;">Debbie Melgarejo</h3>
+                            <h3 name="name" style="margin: 0px 0px 5px 0px; font-size: 14px; color: #a30a24; line-height: 1; font-family: Aileron, Arial, sans-serif; font-weight: 700;">Debbie Melgarejo</h3>
                             <h5 style="margin: 0px 0px 5px 0px; font-size: 12px; color: #191919; line-height: 1; font-family: Inter, Arial, sans-serif; font-weight: 300;">Creative Director, <b style="font-weight: 600;">Blink Creative Studio</b></h5>
 
                             <table border="0" style="border-collapse:collapse;border-spacing:0px;width: 220px; height: auto; margin: 8px 0px;" cellpadding="0" cellspacing="0">
                                 <tr style="font-size: 10px; padding: 0px 0px 0px 5px; margin:0px;">
                                     <td style="width: 10px;">
-                                        <!-- <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/phone.jpg" width="10" height="auto" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:10px;font-size:10px;"/> -->
-                                        <i class="fa-solid fa-phone" style="border:0;display:block;outline:none;text-decoration:none;height:10px;width:10px;font-size:10px;color: #191919;"></i>
+                                        <img name="phone" src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/smartphone.png" width="10" height="auto" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:10px;font-size:10px;"/>
                                     </td>
 
                                     <td style="width: 100px;">
@@ -43,7 +56,7 @@
 
                                 <tr style="font-size: 10px; padding: 0px 0px 0px 5px;margin:0px;">
                                     <td style="width: 10px;">
-                                        <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/globe.jpg" width="10" height="auto" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:10px;font-size:10px;"/>
+                                        <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/globe-asia.png" width="10" height="auto" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:10px;font-size:10px;"/>
                                     </td>
 
                                     <td style="width: 100px;">
@@ -56,7 +69,7 @@
                                 <tr>
                                     <td align="left" style="width: 25px;font-size: 20px; width: 20px; padding: 0px 5px 0px 0px;" valign="top">
                                         <a href="https://www.facebook.com/theblinkcreativestudio/" target="_blank">
-                                            <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/facebook.jpg" width="20" height="auto" style="width:20px; height: auto; display: inline-block; margin: 0px"/>
+                                            <img name="globe" src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/facebook.jpg" width="20" height="auto" style="width:20px; height: auto; display: inline-block; margin: 0px"/>
                                         </a>
                                     </td>
 
