--- a/email3.html
+++ b/email3.html
@@ -16,11 +16,11 @@
                 }
 
                 #phone {
-                    src: "";
+                    src: "https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/smartphone-light.png";
                 }
 
                 #globe {
-                    src: "";
+                    src: "https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/globe-asia-light.png";
                 }
             }
         </style>
