--- a/email3.html
+++ b/email3.html
@@ -15,7 +15,7 @@
         <table border="0" style="border-collapse:collapse;border-spacing:0px;width:400px;" cellpadding="0" cellspacing="0" >
             <tr>
                 <td style="width: 400px; height:auto;" align="left">
-                    <img id="gif" src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/signature_apng.png" width="330" height="auto" style="width:330px; height:auto"/>
+                    <img id="gif" src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/signature_noAA.gif" width="330" height="auto" style="width:330px; height:auto"/>
                 </td>
             </tr>
             
