--- a/email3.html
+++ b/email3.html
@@ -6,16 +6,22 @@
         <link rel="stylesheet" href="https://use.typekit.net/djm4qbw.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css?family=Inter:300,400,500,700" rel="stylesheet" type="text/css">
+        <meta name="color-scheme" content="light dark">
+        <meta name="supported-color-schemes" content="light dark">  
         <style type="text/css">
             @import url(https://fonts.googleapis.com/css?family=Inter:300,400,500,700);
             @import url("https://use.typekit.net/djm4qbw.css");
+
+            :root {
+                color-scheme: light only;
+            }
         </style>
     </head>
     <body>
         <table border="0" style="border-collapse:collapse;border-spacing:0px;width:400px;" cellpadding="0" cellspacing="0" >
             <tr>
                 <td style="width: 400px; height:auto;" align="left">
-                    <img id="gif" src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/signature_noAA.gif" width="330" height="auto" style="width:330px; height:auto"/>
+                    <img id="gif" src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/signature_gray.gif" width="330" height="auto" style="width:330px; height:auto"/>
                 </td>
             </tr>
             
@@ -26,7 +32,7 @@
                             <img id="picture" src="https://rb.gy/pmauok" style="display: block; width: 105px; height: auto; margin:0px" width="105" height="auto" />
                         </td>
                         <td width="295px" valign="top" style="padding: 0px 0px 0px 10px;">
-                            <h3 class="name" style="margin: 0px 0px 5px 0px; font-size: 14px; color: #a30a24 !important; line-height: 1; font-family: Aileron, Arial, sans-serif; font-weight: 700;">Debbie Melgarejo</h3>
+                            <h3 class="name" style="margin: 0px 0px 5px 0px; font-size: 14px; color: #a30a24 !important; line-height: 1; font-family: Aileron, Arial, sans-serif; font-weight: 700; color-scheme: light only;">Debbie Melgarejo</h3>
                             <h5 style="margin: 0px 0px 5px 0px; font-size: 12px; color: #191919; line-height: 1; font-family: Inter, Arial, sans-serif; font-weight: 300;">Creative Director, <b style="font-weight: 600;">Blink Creative Studio</b></h5>
 
                             <table border="0" style="border-collapse:collapse;border-spacing:0px;width: 220px; height: auto; margin: 8px 0px;" cellpadding="0" cellspacing="0">
