--- a/email-sigs/mich-email-sig.html
+++ b/email-sigs/mich-email-sig.html
@@ -28,13 +28,13 @@
             <tr>
                 <table border="0" style="border-collapse:collapse;border-spacing:0px;width: 400px; height: auto;" cellpadding="0" cellspacing="0">
                     <tr>
-                        <td width="105px" height="105px" valign="top" style="margin: 0px;">
-                            <img id="picture" src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/mich.jpeg" style="display: block; width: 105px; height: auto; margin:0px" width="105" height="auto" />
+                        <td width="105px" height="105px" valign="top" style="margin: 0px 0px 0px 0px;">
+                            <img id="picture" src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/mich.jpeg" style="display: block; width: 105px; height: auto; margin:0px 0px 0px 0px;" width="105" height="auto" />
                         </td>
                         <td width="295px" valign="top" style="padding: 0px 0px 0px 10px;">
                             <!-- <h3 class="name" style="margin: 0px 0px 5px 0px; font-size: 14px; color: #a30a24 !important; line-height: 1; font-family: Aileron, Arial, sans-serif; font-weight: 700; color-scheme: light only;">Debbie Melgarejo</h3> -->
                             <img id="name" src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/Michelle%20Gacula.png" width="122" height="14" style="width:122px; height:14px"/>
-                            <h5 style="margin: 0px 0px 5px 0px; font-size: 12px; color: #191919; line-height: 1; font-family: Inter, Arial, sans-serif; font-weight: 300;">Finance Officer, <b style="font-weight: 600;">Blink Creative Studio</b></h5>
+                            <h5 style="margin: 0px 0px 5px 0px; font-size: 12px; color: #191919; line-height: 1; font-family: Aileron, sans-serif; font-weight: 300;">Finance Officer, <b style="font-weight: 600;">Blink Creative Studio</b></h5>
 
                             <table border="0" style="border-collapse:collapse;border-spacing:0px;width: 220px; height: auto; margin: 8px 0px;" cellpadding="0" cellspacing="0">
                                 <tr style="font-size: 10px; padding: 0px 0px 0px 5px; margin:0px;">
@@ -43,7 +43,7 @@
                                     </td>
 
                                     <td style="width: 100px;">
-                                        <a href="tel:+639566030156" style="font-size: 10px; color: #6e6e6e; font-family: Inter, Arial, sans-serif; font-weight: 300; text-decoration: none;">+639566030156</a>
+                                        <a href="tel:+639566030156" style="font-size: 10px; color: #6e6e6e; font-family: Aileron, sans-serif; font-weight: 300; text-decoration: none;">+639566030156</a>
                                     </td>
                                 </tr>
 
@@ -53,7 +53,7 @@
                                     </td>
 
                                     <td style="width: 100px;">
-                                        <a href="https://www.blinkcreativestudio.com/" target="_blank" style="display: inline-block; font-size: 10px; color: #6e6e6e; font-family: Inter, Arial, sans-serif; font-weight: 300; text-decoration: none;">www.blinkcreativestudio.com</a>
+                                        <a href="https://www.blinkcreativestudio.com/" target="_blank" style="display: inline-block; font-size: 10px; color: #6e6e6e; font-family: Aileron, sans-serif; font-weight: 300; text-decoration: none;">www.blinkcreativestudio.com</a>
                                     </td>
                                 </tr>
                             </table>
