Placed margin: 0px on elements

--- a/email-sigs/mich-email-sig.html
+++ b/email-sigs/mich-email-sig.html
@@ -18,9 +18,9 @@
         </style>
     </head>
     <body>
-        <table border="0" style="border-collapse:collapse;border-spacing:0px;width:400px;" cellpadding="0" cellspacing="0" >
+        <table border="0" style="border-collapse:collapse; border-spacing:0px; width:400px; margin: 0px 0px 0px 0px;" cellpadding="0" cellspacing="0" >
             <tr>
-                <td style="width: 400px; height:auto;" align="left">
+                <td style="width: 400px; height:auto; margin: 0px 0px 0px 0px;" align="left">
                     <img id="gif" src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/signature_gray.gif" width="330" height="auto" style="width:330px; height:auto"/>
                 </td>
             </tr>
@@ -31,42 +31,42 @@
                         <td width="105px" height="105px" valign="top" style="margin: 0px 0px 0px 0px;">
                             <img id="picture" src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/mich.jpeg" style="display: block; width: 105px; height: auto; margin:0px 0px 0px 0px;" width="105" height="auto" />
                         </td>
-                        <td width="295px" valign="top" style="padding: 0px 0px 0px 10px;">
+                        <td width="295px" valign="top" style="padding: 0px 0px 0px 10px; margin: 0px 0px 0px 0px;">
                             <!-- <h3 class="name" style="margin: 0px 0px 5px 0px; font-size: 14px; color: #a30a24 !important; line-height: 1; font-family: Aileron, Arial, sans-serif; font-weight: 700; color-scheme: light only;">Debbie Melgarejo</h3> -->
-                            <img id="name" src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/Michelle%20Gacula.png" width="122" height="14" style="width:122px; height:14px"/>
+                            <img id="name" src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/Michelle%20Gacula.png" width="122" height="14" style="width:122px; height:14px; margin: 0px 0px 0px 0px;"/>
                             <h5 style="margin: 0px 0px 5px 0px; font-size: 12px; color: #191919; line-height: 1; font-family: Aileron, sans-serif; font-weight: 300;">Finance Officer, <b style="font-weight: 600;">Blink Creative Studio</b></h5>
 
-                            <table border="0" style="border-collapse:collapse;border-spacing:0px;width: 220px; height: auto; margin: 8px 0px;" cellpadding="0" cellspacing="0">
-                                <tr style="font-size: 10px; padding: 0px 0px 0px 5px; margin:0px;">
-                                    <td style="width: 10px;padding: 0px 2px 0px 0px;">
+                            <table border="0" style="border-collapse:collapse;border-spacing:0px;width: 220px; height: auto; margin: 8px 0px 0px 0px;" cellpadding="0" cellspacing="0">
+                                <tr style="font-size: 10px; padding: 0px 0px 0px 5px; margin:0px 0px 0px 0px;">
+                                    <td style="width: 10px;padding: 0px 2px 0px 0px; margin: 0px 0px 0px 0px;">
                                         <img id="phone" src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/smartphone-gray.png" width="10" height="auto" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:10px;font-size:10px;"/>
                                     </td>
 
-                                    <td style="width: 100px;">
+                                    <td style="width: 100px; margin: 0px 0px 0px 0px;">
                                         <a href="tel:+639566030156" style="font-size: 10px; color: #6e6e6e; font-family: Aileron, sans-serif; font-weight: 300; text-decoration: none;">+639566030156</a>
                                     </td>
                                 </tr>
 
-                                <tr style="font-size: 10px; padding: 0px 0px 0px 5px;margin:0px;">
-                                    <td style="width: 10px;padding: 0px 2px 0px 0px;">
+                                <tr style="font-size: 10px; padding: 0px 0px 0px 5px; margin: 0px 0px 0px 0px;">
+                                    <td style="width: 10px;padding: 0px 2px 0px 0px; margin: 0px 0px 0px 0px;">
                                         <img id="globe"src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/globe-asia-gray.png" width="10" height="auto" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:10px;font-size:10px;"/>
                                     </td>
 
-                                    <td style="width: 100px;">
+                                    <td style="width: 100px; margin: 0px 0px 0px 0px;">
                                         <a href="https://www.blinkcreativestudio.com/" target="_blank" style="display: inline-block; font-size: 10px; color: #6e6e6e; font-family: Aileron, sans-serif; font-weight: 300; text-decoration: none;">www.blinkcreativestudio.com</a>
                                     </td>
                                 </tr>
                             </table>
 
-                            <table border="0" style="border-collapse:collapse;border-spacing:0px;width: 220px; height: auto; margin: 8px 0px" cellpadding="0" cellspacing="0">
+                            <table border="0" style="border-collapse:collapse; border-spacing:0px; width: 220px; height: auto; margin: 8px 0px 0px 0px;" cellpadding="0" cellspacing="0">
                                 <tr>
-                                    <td align="left" style="width: 25px;font-size: 20px; width: 20px; padding: 0px 5px 0px 0px;" valign="top">
+                                    <td align="left" style="width: 25px; height: 20px; font-size: 20px; padding: 0px 0px 0px 0px; margin: 0px 0px 0px 0px;" valign="top">
                                         <a href="https://www.facebook.com/theblinkcreativestudio/" target="_blank">
                                             <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/facebook.jpg" width="20" height="auto" style="width:20px; height: auto; display: inline-block; margin: 0px"/>
                                         </a>
                                     </td>
 
-                                    <td align="left" style="width: 25px;font-size: 20px; width: 20px; padding: 0px 5px 0px 0px;" valign="top">
+                                    <td align="left" style="width: 25px; height: 20px; font-size: 20px; padding: 0px 0px 0px 0px; margin: 0px 0px 0px 0px;" valign="top">
                                         <a href="https://www.instagram.com/theblinkcreativestudio/?hl=en" target="_blank">
                                             <img src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/instagram.jpg" width="20" hegiht="auto" style="width:20px; height: auto; display: inline-block; margin: 0px"/>
                                         </a>
