--- a/email-sigs/krista-email-sig.html
+++ b/email-sigs/krista-email-sig.html
@@ -28,10 +28,10 @@
             <tr>
                 <table border="0" style="border-collapse:collapse;border-spacing:0px;width: 400px; height: auto;" cellpadding="0" cellspacing="0">
                     <tr>
-                        <td width="110px" height="110px" valign="top" style="margin: 0px 0px 0px 0px;">
-                            <img id="picture" src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/krista.jpeg" style="display: block; width: 110px; height: auto; margin:0px 0px 0px 0px;" width="110" height="auto" />
+                        <td width="110" height="100" valign="top" style="margin: 0px 0px 0px 0px;">
+                        <img id="picture" src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/krista.jpeg" style="display: block; width: 100; height: auto; margin:0px 0px 0px 0px;" width="110" height="auto" />
                         </td>
-                        <td width="290px" valign="top" style="padding: 0px 0px 0px 10px; margin: 0px 0px 0px 0px;">
+                        <td width="290" valign="top" style="padding: 0px 0px 0px 10px; margin: 0px 0px 0px 0px;">
                             <!-- <h3 class="name" style="margin: 0px 0px 5px 0px; font-size: 14px; color: #a30a24 !important; line-height: 1; font-family: Aileron, Arial, sans-serif; font-weight: 700; color-scheme: light only;">Debbie Melgarejo</h3> -->
                             <img id="name" src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/Krista%20Lapuz.png" width="122" height="14" style="width:122px; height:14px; margin: 0px 0px 0px 0px;"/>
                             <h5 style="margin: 0px 0px 5px 0px; font-size: 12px; color: #191919; line-height: 1; font-family: Aileron, sans-serif; font-weight: 400;">Senior Account Specialist, <b style="font-weight: 600;">Blink Creative Studio</b></h5>
