--- a/email-sigs/kata-email-sig.html
+++ b/email-sigs/kata-email-sig.html
@@ -29,7 +29,7 @@
                 <table border="0" style="border-collapse:collapse;border-spacing:0px;width: 400px; height: auto;" cellpadding="0" cellspacing="0">
                     <tr>
                         <td width="110px" height="110px" valign="top" style="margin: 0px 0px 0px 0px;">
-                            <img id="picture" src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/mich.jpeg" style="display: block; width: 110px; height: auto; margin:0px 0px 0px 0px;" width="110" height="auto" />
+                            <img id="picture" src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/kata.jpg" style="display: block; width: 110px; height: auto; margin:0px 0px 0px 0px;" width="110" height="auto" />
                         </td>
                         <td width="290px" valign="top" style="padding: 0px 0px 0px 10px; margin: 0px 0px 0px 0px;">
                             <h3 class="name" style="margin: 0px 0px 5px 0px; font-size: 14px; color: #a30a27 !important; line-height: 1; font-family: Aileron, Arial, sans-serif; font-weight: 700; color-scheme: light only;">Catharine Aira Aquino</h3>
