Changed title of Kata from Operations Assistant to Accounts Specialist

--- a/email-sigs/kata-email-sig.html
+++ b/email-sigs/kata-email-sig.html
@@ -34,7 +34,7 @@
                         <td width="290px" valign="top" style="padding: 0px 0px 0px 10px; margin: 0px 0px 0px 0px;">
                             <h3 class="name" style="margin: 0px 0px 5px 0px; font-size: 14px; color: #a30a27 !important; line-height: 1; font-family: Aileron, Arial, sans-serif; font-weight: 700; color-scheme: light only;">Catharine Aira Aquino</h3>
                             <!-- <img id="name" src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/Michelle%20Gacula.png" width="122" height="14" style="width:122px; height:14px; margin: 0px 0px 0px 0px;"/> -->
-                            <h5 style="margin: 0px 0px 5px 0px; font-size: 12px; color: #191919; line-height: 1; font-family: Aileron, sans-serif; font-weight: 400;">Operations Assistant, <b style="font-weight: 600;">Blink Creative Studio</b></h5>
+                            <h5 style="margin: 0px 0px 5px 0px; font-size: 12px; color: #191919; line-height: 1; font-family: Aileron, sans-serif; font-weight: 400;">Accounts Specialist, <b style="font-weight: 600;">Blink Creative Studio</b></h5>
 
                             <table border="0" style="border-collapse:collapse;border-spacing:0px;width: 220px; height: auto; margin: 8px 0px 0px 0px;" cellpadding="0" cellspacing="0">
                                 <tr style="font-size: 10px; padding: 0px 0px 0px 5px; margin:0px 0px 0px 0px;">
