Replaced image of Clein in clein-email-sig

--- a/email-sigs/clein-email-sig.html
+++ b/email-sigs/clein-email-sig.html
@@ -36,7 +36,7 @@
                 <tr>
                     <td width="110px" height="110px" valign="top" style="margin: 0px 0px 0px 0px;">
                         <img id="picture"
-                            src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/mich.jpeg"
+                            src="https://raw.githubusercontent.com/blinkcreativestudio/email-signatures/main/media/CLEIN.jpg"
                             style="display: block; width: 110px; height: auto; margin:0px 0px 0px 0px;" width="110"
                             height="auto" />
                     </td>
